@@ -4,6 +4,7 @@ ChangeLog
 0.6.0.dev0
     * Introduce `const.State.PREPARED`
     * remove m_time from file structure
+    * telemetry method use self.state instead of argument state
 
 0.5.0
     * FILE_CHANGED event sends free_space
